# cloudcommerce

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.claude/: CLAUDE.md
.claude/Skills/: Microanimaciones.md  estetica.md  portal-clientes.md  seo-producto.md  tarjetas.md
apps/admin/: next.config.ts  package.json  postcss.config.mjs
apps/ai/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
apps/ai/src/: config.py  dependencies.py  main.py
apps/ai/src/api/routers/: __init__.py  customers.py  images.py  pricing.py  products.py  trends.py
apps/ai/src/models/: schemas.py
apps/ai/src/services/catalog/: recommendations.py
apps/ai/src/services/generation/: description.py  prompt_safety.py  seo.py  specs.py
apps/ai/src/services/images/: analyzer.py  pipeline.py  prompts.py
apps/ai/src/services/llm/: gemini_client.py  openai_client.py
apps/ai/src/services/pricing/: competitor.py  optimizer.py
apps/ai/src/services/sales/: profiler.py  prompts.py  seller.py
apps/ai/src/services/trends/: analyzer.py
apps/ai/src/utils/: cache.py  helpers.py
apps/ai/tests/: conftest.py  test_api_auth.py  test_pricing.py  test_products.py  test_prompt_safety.py
apps/api/: Dockerfile  package.json  tsconfig.json
apps/store/: .env.example  DESIGN.md  PRODUCT.md  next.config.ts  package.json  postcss.config.mjs
apps/workers/: package.json  tsconfig.json
docs/: PLAN-VISUAL-STORE.md
docs/admin/: 01-vision-y-alcance.md  02-arquitectura-y-stack.md  03-sistema-de-diseno.md  (+6 more)
(+453 files in other folders)
