[project]
name = "cloudcommerce-ai"
version = "1.0.0"
description = "CloudCommerce AI microservice: content, images, pricing, customer intelligence"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "openai>=1.55,<2",
    "google-genai>=1.0,<2",
    "pillow>=11.0,<12",
    "httpx>=0.27,<1",
    "redis>=5.0,<6",
]

[project.optional-dependencies]
dev = ["pytest>=8.3,<9", "pytest-asyncio>=0.24,<1"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py312"
